[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "asserttool"
version = "0.0.1761026777"
description = "common programming functions, similar to assert"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "epprint @ git+https://git@github.com/jakeogh/epprint",
    "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/asserttool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
asserttool = [
    "py.typed",
]
