[build-system]
requires = [
    "setuptools>=61.0", "tomlkit",
]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "asserttool"
version = "1!0.0.1761250315"
description = "common programming functions, similar to assert"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/asserttool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
asserttool = [
    "py.typed",
]
# Configuration for our custom backend
[tool.pep508-url-version-backend]
# Fast path - used when custom index is configured
# Hook should update these version numbers when dependencies change
dependencies-indexed = ["icecream", "epprint>=0.0.1761024887", "globalverbose>=0.0.1761031290"]

# Slow fallback - used when custom index is NOT configured
# Hook should keep these URLs up to date
dependencies-git = [
	"icecream",
	"epprint @ git+https://git@github.com/jakeogh/epprint", 
	"globalverbose @ git+https://git@github.com/jakeogh/globalverbose"
]

# Optional: Custom markers to detect if index is configured
# If any of these strings appear in PIP_INDEX_URL or PIP_EXTRA_INDEX_URL,
# we'll use the fast path
index-urls = [
    "jakeogh.github.io",
    "pip-index",
]
